--- a/wiki/truth.wikitext
+++ b/wiki/truth.wikitext
@@ -18,7 +18,7 @@
 *German: [[Wahrheit]] ''f''
 *Indonesian: [[kebenaran]]
 *Italian: [[verità]] ''f''
-*Japanese: [[真実]] (しんじつ, shinjitsu)
+*Japanese: [[真実]] (しんじつ, shinjitsu), [[本当]] (ほんとう, hontou)
 *Portuguese: [[verdade]]
 *Romanian: [[adevăr]] ''n''
 *[[Romanica]]: [[veritate]] ''f''
