--- a/wiki/aahing.wikitext
+++ b/wiki/aahing.wikitext
@@ -1,1 +1,13 @@
+==English==
+
 ===Pronunciation===
+
+===Noun form===
+'''aahs'''
+
+Plural from [[aah]].
+
+===Verb form===
+'''aahs''
+
+Third person singular, present simple from [[aah]].
