--- a/wiki/aahing.wikitext
+++ b/wiki/aahing.wikitext
@@ -2,12 +2,7 @@
 
 ===Pronunciation===
 
-===Noun form===
-'''aahs'''
-
-Plural from [[aah]].
-
 ===Verb form===
-'''aahs''
+'''aahing'''
 
-Third person singular, present simple from [[aah]].
+Present continuous from [[aah]].
