--- a/wiki/swamp.wikitext
+++ b/wiki/swamp.wikitext
@@ -1,3 +1,6 @@
 ==English==
 ===Noun===
 #A type of [[wetland]] that stretches for [[vast]] distances, and is home to many creatures who have adapted specifically to that environment.
+
+===Translation===
+*{{nl}}: [[moeras]]
