--- a/wiki/thrust.wikitext
+++ b/wiki/thrust.wikitext
@@ -11,6 +11,7 @@
 === Translations ===
 *[[Dutch]]: [[vooruitstuwen]]
 *[[French]]: [[propulser]]
+*[[German]]: [[schieben, stoßen]]
 *[[Indonesian]]: [[]]
 *[[Japanese]]: [[]]
 *[[Spanish]]: [[propulsar]]
