--- a/wiki/object.wikitext
+++ b/wiki/object.wikitext
@@ -13,6 +13,7 @@
 ==== Translations ====
 *[[Finnish]]: [[esine]] (1), [[objekti]] (1,2,3), [[kohde]] (4)
 *[[German]]: [[Objekt]] ''n''
+*{{nl}}: [[Object]] (1,3), [[onderwerp]] (2,4)
 *[[Romanica]]: [[objecto]] ''m''
 *[[Slovak]]: [[predmet]] ''m''
 
