--- a/wiki/yo.wikitext
+++ b/wiki/yo.wikitext
@@ -8,6 +8,12 @@
 *[[hallo]], [[hello]], [[hey]] (''US''), [[hi]] (''especially US''), [[howdy]] (''US'') [[hullo]]
 
 ----
+==Japanese==
+===Particle===
+'''よ'''
+#sentence emphasis
+
+----
 ==Spanish==
 ===Pronoun===
 '''yo'''
