--- a/wiki/aaker.wikitext
+++ b/wiki/aaker.wikitext
@@ -1,3 +1,5 @@
+==English==
+
 == Pronunciation ==
 
 American ([[SAMPA]]):\A"k@`\
@@ -9,3 +11,25 @@ American ([[SAMPA]]):\A"k@`\
 '''Definition''':
 
 {{stub}}
+----
+==Estonian==
+
+===Noun===
+'''aaker'''
+
+====Pronunciation====
+First syllable stressed, third duration.
+
+====Morphology====
+Genitive singular: [[aakri]]
+Partitive singular: [[aakrit]]
+Illative singular: [[aakrisse]]
+Nominative singular: [[aakrid]]
+Genitive plural: [[aakrite]]
+Partitive plural: [[aakreid]]
+Illative plural: [[aakritesse]]
+
+====Meaning====
+Am English area unit (4047 square metres).
+
+'''Translation''': [[acre]]
