--- a/wiki/aaker.wikitext
+++ b/wiki/aaker.wikitext
@@ -21,13 +21,13 @@ American ([[SAMPA]]):\A"k@`\
 First syllable stressed, third duration.
 
 ====Morphology====
-Genitive singular: [[aakri]]
-Partitive singular: [[aakrit]]
-Illative singular: [[aakrisse]]
-Nominative singular: [[aakrid]]
-Genitive plural: [[aakrite]]
-Partitive plural: [[aakreid]]
-Illative plural: [[aakritesse]]
+*Genitive singular: [[aakri]]
+*Partitive singular: [[aakrit]]
+*Illative singular: [[aakrisse]]
+*Nominative singular: [[aakrid]]
+*Genitive plural: [[aakrite]]
+*Partitive plural: [[aakreid]]
+*Illative plural: [[aakritesse]]
 
 ====Meaning====
 Am English area unit (4047 square metres).
