--- a/wiki/%D8%B3%D9%88%D8%B1%D9%8A%D8%A7.wikitext
+++ b/wiki/%D8%B3%D9%88%D8%B1%D9%8A%D8%A7.wikitext
@@ -1,4 +1,10 @@
 == Arabic ==
-'''سوريا''' (suuriaa)
+'''سُورْيَا''' (súrya) ''f''
 
 # [[Syria]]
+
+====Synonym====
+'''[[الشام|الشَّامُ]]''' (aš-šáːm) ''f''
+
+# [[Syria]]
+# [[Damascus]]
