--- a/wiki/aaker.wikitext
+++ b/wiki/aaker.wikitext
@@ -24,7 +24,16 @@ First syllable stressed, third duration.
 *Genitive singular: [[aakri]]
 *Partitive singular: [[aakrit]]
 *Illative singular: [[aakrisse]]
-*Nominative singular: [[aakrid]]
+*Inessive singular: [[aakris]]
+*Elative singular: [[aakrist]]
+*Allative singular: [[aakrile]]
+*Adessive singular: [[aakrilt]]
+*Ablative singular: [[aakrilt]]
+*Translative singular: [[aakriks]]
+*Terminative singular: [[aakrini]]
+*Essive singular: [[aakrina]]
+*Comitative singular: [[aakriga]] 
+*Nominative plural: [[aakrid]]
 *Genitive plural: [[aakrite]]
 *Partitive plural: [[aakreid]]
 *Illative plural: [[aakritesse]]
