--- a/wiki/aaker.wikitext
+++ b/wiki/aaker.wikitext
@@ -36,7 +36,7 @@ First syllable stressed, third duration.
 *Nominative plural: [[aakrid]]
 *Genitive plural: [[aakrite]]
 *Partitive plural: [[aakreid]]
-*Illative plural: [[aakritesse]]
+*Illative plural: [[aakritesse]], [[aakreisse]]
 
 ====Meaning====
 Am English area unit (4047 square metres).
