--- a/wiki/spiritual.wikitext
+++ b/wiki/spiritual.wikitext
@@ -2,7 +2,7 @@
 ===Adjective===
 '''spiritual''' (more spiritual, most spiritual)
 
-# {{stub}}
+# That which pertains to the [[spirit]].
 
 ====Derived terms====
 *[[spirituality]]
