--- a/wiki/aah.wikitext
+++ b/wiki/aah.wikitext
@@ -14,11 +14,10 @@ As an interjection the word is pronounced basically the same way as the interjec
 * Estonian: [[ah]]
 
 ===Noun===
+'''aah''' (plural: [[aahs]])
+
 # Expression of [[amazement]] or [[surprise]] or [[enthusiasm]]. 
 # Expression of joy and/or pleasure. 
-
-====Morphology====
-*Plural: [[aahs]].
 
 ====Translations====
 *Estonian: [[ahhetus]]
