--- a/wiki/ocean.wikitext
+++ b/wiki/ocean.wikitext
@@ -4,7 +4,7 @@
 :o&middot;cean
 
 ===Etymology===
-From Latin '''[[Oceanus]]''', from Greek '''[[Okeanos]]'''; originally a proper noun
+From Latin '''[[Oceanus]]''', from Greek '''[[Ωκεανός]]'''; originally a proper noun
 
 ===Noun===
 '''ocean''', plural '''[[oceans]]'''
