--- a/wiki/geisha.wikitext
+++ b/wiki/geisha.wikitext
@@ -5,6 +5,6 @@ From {{ja}} [[芸者]] (げいしゃ, geisha).
 ===Noun===
 '''geisha''' (''Plural:'' '''geisha''' or [[geishas]])
 
-#{{stub}} [[Category:Definitionless words: English]]
+#A female [[Japanese]] entertainer skilled in various arts such as [[dancing]], [[singing]] and [[writing]].
 ====Translations====
 *{{ja}}: [[芸者]] (げいしゃ, geisha)
