--- a/wiki/blitzkrieg.wikitext
+++ b/wiki/blitzkrieg.wikitext
@@ -1,4 +1,4 @@
-==German==
+==English==
 ===Etymology===
 [[Blitz]] (lightning or flash) + [[Krieg]] (war)
 
@@ -9,3 +9,7 @@
 
 ====Related terms====
 *[[sitzkrieg]]<!-- in English only? -->
+
+==German==
+===Noun===
+#lightning war, tactic used by Nazi Germany to win battles fast with few German causualty.
