--- a/wiki/ocean.wikitext
+++ b/wiki/ocean.wikitext
@@ -1,5 +1,6 @@
 ==English==
-
+===Pronunciation===
+*IPA: /ˈəʊʃən/
 ===Hyphenation===
 :o&middot;cean
 
@@ -18,6 +19,7 @@ From Latin '''[[Oceanus]]''', from Greek '''[[Ωκεανός]]'''; originally a 
 *Cinese character: [[洋]]
 *German: [[Ozean]] ''m''
 *Finnish: [[valtameri]]
+*French: [[océan]] ''m''
 *Hebrew: [[ים|יָם]] ''m''
 *Italian: [[oceano]] ''m''
 *Latin: [[Oceanus]]
