--- a/wiki/royal_jelly.wikitext
+++ b/wiki/royal_jelly.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''[[royal]] [[jelly]]'''
 
-# A special food made by [[bees]] to feed the [[queen]]
+# A special food made by [[bee]]s to feed the [[queen]]
 
 ====Translations====
 *German: [[Weiselfuttersaft]]
