--- a/wiki/wraith.wikitext
+++ b/wiki/wraith.wikitext
@@ -9,7 +9,7 @@ From Scottish [[warth]], probably originally ''a guardian angel'' from Old Norse
 ===Noun===
 '''wraith''' (''Plural:'' [[wraiths]])
 
-#{{stub}}
+#[[ghost]]
 ===Derived Terms===
 *[[wraithish]]
 *[[wraithful]]
