--- a/wiki/%D0%BB%D0%B5%D1%82%D0%BE.wikitext
+++ b/wiki/%D0%BB%D0%B5%D1%82%D0%BE.wikitext
@@ -1,9 +1,18 @@
 ==Russian==
 ===Noun===
-'''ле́то''' ''n'' (l'éto)
+'''лето''' (l'éto) ''n'', '''лета''' (l'etá) ''pl''
 
 # [[summer]]
+# ''pl'': [[year]]s, [[age]], [[summer]]s
 
 ====Derived terms====
 *[[индейское лето|инде́йское ле́то]] ''n'' (ind'éjskoje l'éto)
 *[[бабье лето|ба́бье ле́то]] ''n'' (báb'je l'éto)
+
+====Related terms====
+*[[год]]
+*[[летний]]
+*[[летом]]
+*[[летописец]]
+*[[летопись]]
+*[[леточисление]]
