--- a/wiki/unmount.wikitext
+++ b/wiki/unmount.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-# Reverse operation of [[mount]]. {{stub}}
+# Reverse operation of [[mount]].  Flushes a device, and stops all programs that are using it.
 
 ====Synonyms====
 * ''(Unix jargon)'' [[umount]]
