--- a/wiki/bonsai.wikitext
+++ b/wiki/bonsai.wikitext
@@ -5,7 +5,7 @@ From {{ja}} [[盆栽]] (ぼんさい, bonsai).
 ===Noun===
 '''bonsai''' (''Plural:'' '''bonsai''' ''or'' [[bonsais]])
 
-#a miniature tree {{stub}} [[Category:Definitionless words: English]]
+#a miniature tree.
 ====Translations====
 *{{fr}}: [[bonsaï]] [[:fr:bonsaï|^]]
 *{{ja}}: [[盆栽]] (ぼんさい, bonsai)
