--- a/wiki/defend.wikitext
+++ b/wiki/defend.wikitext
@@ -9,7 +9,8 @@ Middle English [[defenden]], from Old French [[defendre]], from Latin [[defender
 ===Verb===
 '''defend'''
 
-#{{stub}}
+#To [[ward off]] an [[attacker]].
+#To [[protect]] one's assets, or allies.
 ===Translations===
 *{{la}}: [[defendere]]
 ===Related Terms===
