--- a/wiki/maiden_flight.wikitext
+++ b/wiki/maiden_flight.wikitext
@@ -2,6 +2,4 @@
 ===Noun===
 '''[[maiden]] [[flight]]'''
 
-#The first flight of an airplane. Usually used to test or demonstrate the functions of the systems.
-
-{{stub}}
+#The first flight of an [[airplane]]. Usually used to test or demonstrate the functions of the systems.
