--- a/wiki/within.wikitext
+++ b/wiki/within.wikitext
@@ -1,5 +1,3 @@
-{{stub}}
-
 ==English==
 
 ===Hyphenation===
@@ -10,7 +8,7 @@
 
 '''within'''
 
-#
+#That which is [[inside]] of [[something]].
 
 ====Translations====
 
