--- a/wiki/pick.wikitext
+++ b/wiki/pick.wikitext
@@ -16,7 +16,7 @@
 '''pick''' ([[picks]])
 
 # A tool used for digging. {{stub}}
-# A [[choice]]. {{stub}}
+# A [[choice]].
 
 ====Derived terms====
 *[[take one's pick]]
