--- a/wiki/pick.wikitext
+++ b/wiki/pick.wikitext
@@ -15,7 +15,7 @@
 ===Noun===
 '''pick''' ([[picks]])
 
-# A tool used for digging. {{stub}}
+# A tool used for digging.
 # A [[choice]].
 
 ====Derived terms====
