--- a/wiki/%D8%A7%D9%86%D8%AA.wikitext
+++ b/wiki/%D8%A7%D9%86%D8%AA.wikitext
@@ -1,6 +1,6 @@
 ==Arabic==
 ===Pronoun===
-'''أنْتَ''' (’ánta) ''m'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
+'''أنْتَ''' (’ínta) ''m'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
 
 # [[you]]
 
