--- a/wiki/%D8%A7%D9%86%D8%AA.wikitext
+++ b/wiki/%D8%A7%D9%86%D8%AA.wikitext
@@ -5,6 +5,6 @@
 # [[you]]
 
 ===Pronoun===
-'''أنْتِ''' (’ánti) ''f'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
+'''أنْتِ''' (’ínti) ''f'', [[انتوا|أنْتُوا]] (’íntu) ''pl''
 
 # [[you]]
