--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -1,5 +1,16 @@
 ==Russian==
 ===Noun===
-'''укроп''' (ukrop)
+'''укроп''' (ukróp) ''m''
 
 # [[dill]]
+# [[fennel]]
+
+====Synonyms====
+* укроп огородный (ukróp ogoródnyj, ''garden dill''), укроп пахучий (ykróp pakhúčij, ''fragrant dill'')
+
+:# [[dill]] (''Anethum graveolens'')
+
+
+* аптечный укроп (aptéčnyj ukróp, ''pharmacy dill''), сладкий укроп (sládkij ukróp, ''sweet dill'')
+
+:# [[fennel]] (''Foeniculum vulgare'')
