--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -3,14 +3,9 @@
 '''укроп''' (ukróp) ''m''
 
 # [[dill]]
+#:укроп огородный (ogoródnyj), ''garden dill''
+#:укроп пахучий (pakhúčij), ''fragrant dill''
 # [[fennel]]
-
-====Synonyms====
-* укроп огородный (ukróp ogoródnyj, ''garden dill''), укроп пахучий (ykróp pakhúčij, ''fragrant dill'')
-
-:# [[dill]] (''Anethum graveolens'')
-
-
-* аптечный укроп (aptéčnyj ukróp, ''pharmacy dill''), сладкий укроп (sládkij ukróp, ''sweet dill'')
-
-:# [[fennel]] (''Foeniculum vulgare'')
+#:укроп аптечный (aptéčnyj), ''pharmacy dill''
+#:укроп волошский (vóloshskij), ''voloshsky dill''
+#:укроп сладкий (sládkij), ''sweet dill''
