--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -3,8 +3,8 @@
 '''укроп''' (ukróp) ''m''
 
 # [[dill]]
-#:укроп огородный (ogoródnyj), ''garden dill''
-#:укроп пахучий (pakhúčij), ''fragrant dill''
+#:укроп огородный (ogoródnyj) ''garden dill''
+#:укроп пахучий (pakhúčij) ''fragrant dill''
 # [[fennel]]
 #:укроп аптечный (aptéčnyj), ''pharmacy dill''
 #:укроп волошский (vóloshskij), ''voloshsky dill''
