Added definition of a cord of firewood. <cord#26289>

--- a/wiki/cord.wikitext
+++ b/wiki/cord.wikitext
@@ -53,6 +53,7 @@
 |}
 
 '''unit of measurement for firewood'''
+* Defined as a stack of [[firewood]] measuring 4 feet x 4 feet by 8 feet, or 128 cubic feet.  
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
