--- a/wiki/swivel.wikitext
+++ b/wiki/swivel.wikitext
@@ -3,8 +3,7 @@
 \Swiv"el\, 
 == Noun ==
 
-
- See [[swoop]], and [[cf.]] [[swift]] a reel, [[swift]], [[a.]]
+See [[swoop]], and [[cf.]] [[swift]] a reel, [[swift]], [[a.]]
 
 1. ([[Mech.]]) A piece, as a ring or hook, attached to another  piece by a pin, in such a manner as to permit rotation about the pin as an axis.
 
@@ -12,8 +11,7 @@
 
 Swivel bridge, a kind of drawbridge that turns round on a vertical axis; a swing bridge.
 
-{Swivel hook}, a hook connected with the iron strap of a pulley block by a swivel joint, for readily taking the
-   turns out of a tackle.
+{Swivel hook}, a hook connected with the iron strap of a pulley block by a swivel joint, for readily taking the    turns out of a tackle.
 
 {Swivel joint}, a joint, the two pieces composing which turn round, with respect to each other, on a longitudinal pin  or axis, as in a chain, to prevent twisting.
 
