--- a/wiki/write.wikitext
+++ b/wiki/write.wikitext
@@ -27,6 +27,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Cebuano: [[sulat]]
 *Dutch: [[schrijven]]
 *French: [[écrire]]
 *German: [[schreiben]]
