--- a/wiki/pedestal.wikitext
+++ b/wiki/pedestal.wikitext
@@ -11,10 +11,8 @@ See [[foot]],  [[Stall]], [[Footstall]], [[stand]] and [[swivel]]
 2.
 (a) (Railroad Cars) A casting secured to the frame of a truck and forming a jaw for holding a journal box.
 (b) (Mach.) A pillow block; a low housing.
-(c) (Bridge Building) An iron socket, or support, for the foot of a brace at the end of a truss where it rests
-       on a pier.
+(c) (Bridge Building) An iron socket, or support, for the foot of a brace at the end of a truss where it rests on a pier.
 
-Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above
-   another, -- used in a radiator.
+Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above another, -- used in a radiator.
 
 [[es:peana]]
