--- a/wiki/pedestal.wikitext
+++ b/wiki/pedestal.wikitext
@@ -15,4 +15,7 @@ See [[foot]],  [[Stall]], [[Footstall]], [[stand]] and [[swivel]]
 
 Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above another, -- used in a radiator.
 
+== External links ==
+* [http://www.bhphotovideo.com/bnh/controller/home?O=ProductDetail&A=showItemLargeImage&Q=&sku=334535 TV pedestal].
+
 [[es:peana]]
