--- a/wiki/pedestal.wikitext
+++ b/wiki/pedestal.wikitext
@@ -2,7 +2,7 @@
 
 \Ped"es*tal\,
 == Noun ==
-See [[foot]],  [[Stall]], [[Footstall]], [[stand]] and [[swivel]]
+See [[foot]],  [[stall]], [[footstall]], [[stand]] and [[swivel]]
 
 1. (Arch.) The base or foot of a column, statue, vase, lamp, or the like; the part on which an upright work stands. It  consists of three parts, the base, the die or dado, and the cornice or surbase molding. See Illust. of {Column}.
 
