--- a/wiki/pedestal.wikitext
+++ b/wiki/pedestal.wikitext
@@ -15,6 +15,8 @@ See [[foot]],  [[stall]], [[footstall]], [[stand]] and [[swivel]]
 
 Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above another, -- used in a radiator.
 
+See also: [[w:liquid crystal display television| LCD TV]].
+
 == External links ==
 * [http://www.bhphotovideo.com/bnh/controller/home?O=ProductDetail&A=showItemLargeImage&Q=&sku=334535 TV pedestal].
 
