--- a/wiki/one.wikitext
+++ b/wiki/one.wikitext
@@ -230,7 +230,7 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *French: ''Not translated using an adjective'': '''he is one''' - il a un an
-*French: ''Not translated using an adjective'': '''he is one''' - ha un anno
+*Italian: ''Not translated using an adjective'': '''he is one''' - ha un anno
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
