--- a/wiki/the.wikitext
+++ b/wiki/the.wikitext
@@ -44,7 +44,7 @@ The word ''the'' is pronounced /ðiː/ whenever it is pronounced as a distinct w
 
 * When it is used for emphasis (''This is ''the'' hospital for heart surgery.'').
 * When the speaker pauses between ''the'' and the next word (''the ... sovereignity'').
-* In many but not all dialects, when the next word begins with a vowel (''the onion'').
+* In many but not all dialects, when the next word begins with a vowel (''the onion'') (compare with [[a]] vs. [[an]]). 
 <!--no: this is not true: * When referred to as a word (''the word "the"''). -->
 
 The word is generally not pronounced distinctly when attached to a word beginning with a consonant, in which case the ''e'' becomes a [[schwa]] or is dropped entirely.  In dialects that do not pronounce ''the'' distinctly before a vowel, a glottal stop is generally inserted (e.g., ''the Us'' in ''the Us festival'' would still be pronounced differently from ''thus'' in ''thus festival seating should be outlawed'').
