--- a/wiki/pray.wikitext
+++ b/wiki/pray.wikitext
@@ -13,6 +13,7 @@
 
 ====Translations====
 *Chinese: [[祈祷]], [[祷告]]
+*Finnish: [[rukoilla]] (1, 2, 3), [[anoa]] (2)
 *French: [[prier]]
 *Italian: [[pregare]]
 *Japanese: [[祈る]] (いのる, inoru) (1), [[願う]] (ねがう, negau) (2)
