removed Sanskrit transcription with website address; added Finnish noun <rahi#66938>

--- a/wiki/rahi.wikitext
+++ b/wiki/rahi.wikitext
@@ -1,5 +1,7 @@
-Means guidance in old-sanskrit to english phoenetic translation.
+==Finnish==
 
----------------------------------------------------------------
-<www.rahiv.tk>
----------------------------------------------------------------
+===Noun===
+'''rahi'''
+
+# low [[bench]] (''oldfashioned'')
+# [[footstool]], [[stool]]
