+fi, dewikify <thrust#7721>

--- a/wiki/thrust.wikitext
+++ b/wiki/thrust.wikitext
@@ -1,20 +1,23 @@
+==English==
+
 === Pronunciation ===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'θɻʌst/
 
-=== Verb ===
+===Verb===
 
 '''to thrust''' (thrust, thrust)
 
 # to make advance with force
 
-=== Translations ===
-*[[Dutch]]: [[vooruitstuwen]]
-*[[French]]: [[propulser]]
-*[[German]]: [[schieben, stoßen]]
-*[[Indonesian]]: [[]]
-*[[Japanese]]: [[]]
-*[[Spanish]]: [[propulsar]]
+====Translations ====
+*Dutch: [[vooruitstuwen]]
+*Finnish: [[työntää]] (1), [[sysätä]] (1), [[iskeä]] (1)
+*French: [[propulser]]
+*German: [[schieben, stoßen]]
+*Indonesian: [[]]
+*Japanese: [[]]
+*Spanish: [[propulsar]]
 
 === Verb ===
 
@@ -22,7 +25,7 @@
 
 # past tense of to thrust
 
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[stuwde vooruit]], [[stuwden vooruit]]
 
 === Verb ===
@@ -31,5 +34,5 @@
 
 # past participle of to thrust
 
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[vooruitgestuwd]]
