--- a/wiki/swivel.wikitext
+++ b/wiki/swivel.wikitext
@@ -1,22 +1,18 @@
-== Pronunciation ==
 
+{{webster}}
+===English===
+===Pronunciation===
 \Swiv"el\, 
-== Noun ==
-
+===Noun===
+'''swivel'''
 See [[swoop]], and [[cf.]] [[swift]] a reel, [[swift]], [[a.]]
 
-1. ([[Mech.]]) A piece, as a ring or hook, attached to another  piece by a pin, in such a manner as to permit rotation about the pin as an axis.
+#([[Mech.]]) A piece, as a ring or hook, attached to another  piece by a pin, in such a manner as to permit rotation about the pin as an axis.
+#([[Mililtary]]) A small piece of ordenance, turning on a point or swivel; -- called also swivel gun. --[[w:Wilhelm]].
+#Swivel bridge, a kind of drawbridge that turns round on a vertical axis; a swing bridge.
+#Swivel hook, a hook connected with the iron strap of a pulley block by a swivel joint, for readily taking the turns out of a tackle.
+#Swivel joint, a joint, the two pieces composing which turn round, with respect to each other, on a longitudinal pin  or axis, as in a chain, to prevent twisting.
 
-2. ([[Mil.]]) A small piece of ordenance, turning on a point or swivel; -- called also swivel gun. --[[w:Wilhelm]].
-
-Swivel bridge, a kind of drawbridge that turns round on a vertical axis; a swing bridge.
-
-{Swivel hook}, a hook connected with the iron strap of a pulley block by a swivel joint, for readily taking the    turns out of a tackle.
-
-{Swivel joint}, a joint, the two pieces composing which turn round, with respect to each other, on a longitudinal pin  or axis, as in a chain, to prevent twisting.
-
-== Verb ==
-
-===Intransitive ===
-
-To swing or turn, as on a pin or pivot.
+===Intransitive Verb===
+'''swivel'''
+#To swing or turn, as on a pin or pivot.
