--- a/wiki/pedestal.wikitext
+++ b/wiki/pedestal.wikitext
@@ -1,23 +1,21 @@
-== Pronunciation ==
-
-\Ped"es*tal\,
-== Noun ==
+{{webster}}
+==English==
+===Pronunciation===
+\Ped"es*tal\
+===Noun===
 See [[foot]],  [[stall]], [[footstall]], [[stand]] and [[swivel]]
 
-1. (Arch.) The base or foot of a column, statue, vase, lamp, or the like; the part on which an upright work stands. It  consists of three parts, the base, the die or dado, and the cornice or surbase molding. See Illust. of {Column}.
+#(Arch.) The base or foot of a column, statue, vase, lamp, or the like; the part on which an upright work stands. It  consists of three parts, the base, the die or dado, and the cornice or surbase molding. See Illust. of {Column}.
 
          Build him a pedestal, and say, ``Stand there!''  --[[w:Cowper]].
 
-2.
-(a) (Railroad Cars) A casting secured to the frame of a truck and forming a jaw for holding a journal box.
-(b) (Mach.) A pillow block; a low housing.
-(c) (Bridge Building) An iron socket, or support, for the foot of a brace at the end of a truss where it rests on a pier.
+#
+##(Railroad Cars) A casting secured to the frame of a truck and forming a jaw for holding a journal box.
+##(Mach.) A pillow block; a low housing.
+##(Bridge Building) An iron socket, or support, for the foot of a brace at the end of a truss where it rests on a pier.
+#Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above another, -- used in a radiator.
 
-Pedestal coil (steam Heating), a group of connected straight pipes arranged side by side and one above another, -- used in a radiator.
-
-See also: [[w:liquid crystal display television| LCD TV]].
-
-== External links ==
+===External links===
 * [http://www.bhphotovideo.com/bnh/controller/home?O=ProductDetail&A=showItemLargeImage&Q=&sku=334535 TV pedestal].
 
 [[es:peana]]
