replaced rubbish with info from "Malay" article - but details missing <Maleis#49878>

--- a/wiki/Maleis.wikitext
+++ b/wiki/Maleis.wikitext
@@ -1,1 +1,11 @@
-'''Bold text'''
+==Afrikaans==
+===Noun===<!-- also adj? -->
+<!-- capitalized in Afrikaans? -->
+# [[Malay]]<!-- person, language, both? -->
+
+----
+
+==Dutch==
+===Noun===<!-- also adj? -->
+<!-- capitalized in Dutch? -->
+# [[Malay]]<!-- person, language, both? -->
