Added strict mathematical sense, usage note on distinction <square root#43108>

--- a/wiki/square_root.wikitext
+++ b/wiki/square_root.wikitext
@@ -1,9 +1,15 @@
 ==English==
+
 ===Noun===
 '''square root''' (''plural'' '''square roots''')
 
-#(''mathematics'') Of a number ''n'', a positive number the [[square]] of which is equal to ''n''.
-#:''3 is the square root of 9''.
+#(''mathematics'') A number which, when [[square]]d, yields the given number.
+#: ''Every complex number has two square roots; for example, the square roots of -4 are 2i and -2i.''
+# The positive number, if such exists, which when squared yields the given number.
+#: ''The square root of -4 does not exist, but the square root of 4 is 2.''  
+
+===Usage Note===
+Even in mathematical contexts, ''square root'' generally means ''positive square root.''  If there is a chance of ambiguity, use a construction like ''a square root'' or ''a complex square root'' to indicate the strict definition, or ''the positive square root'' or similar to indicate the looser sense.
 
 ====Translations====
 *[[Chinese]]: [[平方根]]
