/* Translations */ fmt <bistro#44171>

--- a/wiki/bistro.wikitext
+++ b/wiki/bistro.wikitext
@@ -5,6 +5,7 @@ From the Slavic word '''[[bystrý]]''' meaning ''quick''.
 # a small European restaurant
 # a small bar
 ==== Translations ====
-*Slovak [[bistro]] ''n''
+*Slovak: [[bistro]] ''n''
+
 === See Also ===
 * [[fast food]]
