+fr (from qalam mailing list) <tutti-frutti#66797>

--- a/wiki/tutti-frutti.wikitext
+++ b/wiki/tutti-frutti.wikitext
@@ -8,4 +8,5 @@ Italian ''[[tutti]]'', all, ''frutti'', plural of ''[[frutto]]'', fruit<!--Is it
 #A variety of [[ice cream]] that contains chopped [[candied fruit]].
 
 ====Translations====
+*French: [[glace de plombières]]
 *Russian: [[мороженое с фруктами]] ''n'', [[фруктовое мороженое]] ''n''
