--- a/wiki/donate.wikitext
+++ b/wiki/donate.wikitext
@@ -3,6 +3,6 @@
 *{{hu}}: [[:hu:adományoz|adományoz]]
 *{{de}}: [[:de:schenken|schenken]]
 *{{it}}: [[:it:donare|donare]]
-*{{ro}}: [[:ro:a dona|a dona]]
+*{{ro}}: a [[:ro:dona|dona]]
 *{{es}}: [[:es:donar|donar]]
 *{{sv}}: [[:sv:skänka|skänka]]
