ga <where is the toilet#36351>

--- a/wiki/where_is_the_toilet.wikitext
+++ b/wiki/where_is_the_toilet.wikitext
@@ -11,6 +11,7 @@
 *{{fr}}: [[Où sont les toilettes ?]]
 *{{de}}: [[Wo ist die Toilette?]]
 *{{Sco}}: [[Whaur's the toilet?]]
+*{{ga}}: [[Cá bhfuil an leithreas?]]
 *{{gd}}: [[Càit a bheil an taigh beag?]]
 *{{he}}: [[איפה השרוטים]] (eifo ha sherotim)
 *{{it}}: [[Dove sono i gabinetti?]]
