--- a/wiki/putative.wikitext
+++ b/wiki/putative.wikitext
@@ -8,4 +8,12 @@ First attested [[w:1432|1432]], from [[Modern French]] [[putatif]], from [[Latin
 *[[reputed]]
 *[[supposed]]
 ====Translations====
-*Russia: [[предположительный]], [[вероятный]], [[мнимый]]
+*Russian: [[предположительный]], [[вероятный]], [[мнимый]]
+===Adverb===
+#In a putative manner; supposedly.
+====Synonyms====
+*[[purportedly]]
+*[[reputedly]]
+*[[supposedly]]
+====Translations====
+*Russian: [[предположительно]], [[вероятно]]
