--- a/wiki/putatively.wikitext
+++ b/wiki/putatively.wikitext
@@ -1,12 +1,1 @@
-==English==
-===Etymology===
-First attested [[w:1432|1432]], from [[Modern French]] [[putatif]], from [[Latin]] [[putativus]] ''[[suppose]]d, [[purport]]ed'', from [[putatus]], from [[putare]] ''to think''. 
-===Adverb===
-#Commonly believed to be true on inconclusive grounds
-====Synonyms====
-*[[purportedly]]
-*[[supposedly]]
-====Related====
-*[[putative]]
-====Translations====
-*Russia: [[предположительно]], [[вероятно]]
+#REDIRECT [[putative]]
