initial definition? <diagnosis#38444>

--- a/wiki/diagnosis.wikitext
+++ b/wiki/diagnosis.wikitext
@@ -2,6 +2,8 @@
 
 ===Noun===
 '''diagnosis''' '(Plural: [[diagnoses]])
+#A medical term used to specify an illness
+#The result of specific tests for an illness
 
 ====Translations====
 *Dutch: [[diagnose]] ''f''
@@ -9,3 +11,9 @@
 *French: [[diagnose]] ''f''
 *German: [[Diagnose]] ''f''
 *[[Italian]]: [[diagnosi]] ''f''
+
+=== Related Terms ====
+*[[Diagnose]]
+
+
+{{cleanup}}
