--- a/wiki/under.wikitext
+++ b/wiki/under.wikitext
@@ -1,6 +1,14 @@
 ===Preposition===
 '''under'''
 
+====Translations====
+* Dutch: [[onder]]
+* French: [[sous]]
+* German: [[unter]]
+* Italian: [[sotto]]
+* Swedish: [[under]]
+<!-- not sure * Spanish: [[debajode]] --> 
+
 ====Synonyms====
 *[[above]]
 
