--- a/wiki/morbidity.wikitext
+++ b/wiki/morbidity.wikitext
@@ -1,22 +1,17 @@
 ==English==
 ===Etymology===
-From Latin 'Mort'.  Presumably, that which will kill you if you don't treat it?
+From [[morbid]], from [[Latin]] [[morbidus]] ''diseased'', from [[morbus]] ''disease'', from [[mori]] ''to die''.
 ===Noun===
-'''Morbidity''' (plural: ''morbidities'')
-# What desease, illness, ailment or problem a patient has (that is being discussed, or addressed, or has a service being applied toward.)
+'''Morbidity''' (pl. ''morbidities'')
+#The ratio of deaths to the population; expressed in 1000 per year; [[death rate]]
+#The quality of being unhealthful, morbid; morbidness
+#The [[incidence]] of a disease
+====Synonyms====
+#[[death rate]], [[deathrate]], [[mortality]], [[mortality rate]]
+#[[morbidness]], [[unwholesomeness]]
+====Related terms====
+*[[Comorbidity]]
 
-
-Example: When entering a service or procedure, clerks must be sure they apply the service code to the correct morbidity, especially when the patient is being treated for several different illnesses.  
-
-=== Related Terms ===
-
-[[Comorbidity]]
-
-=== See also ===
-*[[diagnosis]]
-*[[illness]]
-*[[ailment]]
-
-
-
-{{cleanup}}
+===See also===
+*[[soreness]]
+*[[valetudinarianism]]
