--- a/wiki/diagnosis.wikitext
+++ b/wiki/diagnosis.wikitext
@@ -10,7 +10,8 @@
 *Finnish: [[diagnoosi]]
 *French: [[diagnose]] ''f''
 *German: [[Diagnose]] ''f''
-*[[Italian]]: [[diagnosi]] ''f''
+*Italian: [[diagnosi]] ''f''
+*Russian: [[диагноз]] ''m'', [[диагнозы]] ''pl.''
 
 === Related Terms ====
 *[[Diagnose]]
