--- a/wiki/senior.wikitext
+++ b/wiki/senior.wikitext
@@ -1,36 +1,46 @@
 ==English==
 ===Etymology===
 Comparative form, from Latin ''[[senex]]'', '''old'''
+
 ===Adjective===
 '''senior'''
+
 #[[older]]
+
 ====Antonyms====
 *[[junior]]
+
+====Derived terms====
+*[[seniority]]
+
 ====Translations====
 *{{msg:fi}}: [[vanhempi]]
 
-----------
+----
 
 ==Interlingua==
 ===Etymology===
 From Latin ''[[senior#Latin|senior]]'' "older"
+
 ===Adjective===
 # [[older]]
+
 ===Noun===
 # [[lord]]
+
 ===Treatment?===
 # [[mister]]
 
-----------
+----
 
 ==Latin==
-===Comparative Adjective===
+===Adjective===
 '''senior''', '''[[senioris]]'''
 
 '''senior''' is the comparative form of the adjective ''[[senex]]''.
 
 # [[older]], [[elder]]
 
-===Related Terms===
+===Related terms===
 *[[senate]]
 *[[senex]]
