cleanup, etym, correcting <diagnosis#38444>

--- a/wiki/diagnosis.wikitext
+++ b/wiki/diagnosis.wikitext
@@ -1,9 +1,10 @@
 ==English==
-
+===Etymology===
+First attested [[w:1681|1681]], from [[Greek]] [[diagnosis]] "discerning", from [[diagignoskein]] "discern", from [[dia-]] ''apart'' + [[gignoskein]] ''to learn''.
 ===Noun===
 '''diagnosis''' '(Plural: [[diagnoses]])
-#A medical term used to specify an illness
-#The result of specific tests for an illness
+#(Medicine)The result of identifying the nature and cause of an illness
+#The result of identifying the nature and cause of something (of any nature)
 
 ====Translations====
 *Dutch: [[diagnose]] ''f''
@@ -13,8 +14,5 @@
 *Italian: [[diagnosi]] ''f''
 *Russian: [[диагноз]] ''m'', [[диагнозы]] ''pl.''
 
-=== Related Terms ====
-*[[Diagnose]]
-
-
-{{cleanup}}
+====Related Terms====
+*[[diagnose]]
