--- a/wiki/height.wikitext
+++ b/wiki/height.wikitext
@@ -3,7 +3,7 @@
 
 ====Translations====
 *Lithuanian: [[aukštis]] ''m'', [[aukštumas]] ''m''
-*Ελληνικά: [[ύψος]]
+*Greek (Ελληνικά): [[ύψος]]
 
 ====Antonyms====
 *[[depth]]
