--- a/wiki/yes.wikitext
+++ b/wiki/yes.wikitext
@@ -40,6 +40,7 @@ An example of '''yes''' used to disagree with a statement: the questions "You do
 *Finnish: [[kyllä]]
 *French: [[oui]] (1), [[si]] (2)
 *German: [[ja]] (1), [[doch]] (2)
+*Greek (Ελληνικά): [[ναι]]
 *[[Guarani]]: [[heẽ]]
 *Hebrew: [[כן]] (ken)
 *[[Hindi]]: [[हाँ]] (hā̃)
