--- a/wiki/height.wikitext
+++ b/wiki/height.wikitext
@@ -1,9 +1,11 @@
 ===Noun===
 '''height'''
-
+#The distance from the base of something to the top
+#Height of a standing person or animal (withers)
 ====Translations====
 *Lithuanian: [[aukštis]] ''m'', [[aukštumas]] ''m''
-*Greek (Ελληνικά): [[ύψος]]
+*Greek: [[ύψος]]
+*Russian:  [[высота]] ''f'' (1), [[рост]] ''m'' (2)
 
 ====Antonyms====
 *[[depth]]
