--- a/wiki/height.wikitext
+++ b/wiki/height.wikitext
@@ -1,7 +1,7 @@
 ===Noun===
 '''height'''
 #The distance from the base of something to the top
-#Height of a standing person or animal (withers)
+#Height of a standing person or animal ([[withers]])
 ====Translations====
 *Lithuanian: [[aukštis]] ''m'', [[aukštumas]] ''m''
 *Greek: [[ύψος]]
