--- a/wiki/morbidity.wikitext
+++ b/wiki/morbidity.wikitext
@@ -6,6 +6,7 @@ From [[morbid]], from [[Latin]] [[morbidus]] ''diseased'', from [[morbus]] ''dis
 #The ratio of deaths to the population; expressed in 1000 per year; [[death rate]]
 #The quality of being unhealthful, morbid; morbidness
 #The [[incidence]] of a disease
+#An occurrence of illness or disease, or a single symptom of that illness
 ====Synonyms====
 #[[death rate]], [[deathrate]], [[mortality]], [[mortality rate]]
 #[[morbidness]], [[unwholesomeness]]
