--- a/wiki/concomitant.wikitext
+++ b/wiki/concomitant.wikitext
@@ -1,3 +1,18 @@
-''adj.'' Adjoining, accompanying
+==English==
+===Etymology===
+First attested [[w:1607|1607]], from [[French]] [[concomitant]], from [[Latin]] [[concomitari]] ''accompany'', from [[con-]] ''together'' + [[comitari]] ''to company", from [[comes]], [[comitis]] "companion".
+===Adjective===
+#Following as a consequence
+#:''concomitant circumstance''
+#:''concomitant disease''
+====Synonyms====
+*[[accompanying]]
+*[[adjoining]]
+*[[attendant]]
+*[[incidental]]
 
-{{cleanup}}
+===Noun===
+#A concomitant event or situation
+====Synonyms====
+*[[accompaniment]]
+*[[co-occurance]]
