--- a/wiki/concomitant.wikitext
+++ b/wiki/concomitant.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Etymology===
-First attested [[w:1607|1607]], from [[French]] [[concomitant]], from [[Latin]] [[concomitari]] ''accompany'', from [[con-]] ''together'' + [[comitari]] ''to company", from [[comes]], [[comitis]] "companion".
+First attested [[w:1607|1607]], from [[French]] [[concomitant]], from [[Latin]] [[concomitari]] ''accompany'', from [[con-]] ''together'' + [[comitari]] ''to company'', from [[comes]], [[comitis]] "companion".
+
 ===Adjective===
 #Following as a consequence
 #:''concomitant circumstance''
