wikification; +zh compound <重#29209>

--- a/wiki/%E9%87%8D.wikitext
+++ b/wiki/%E9%87%8D.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#heavy, weighty
-*# double
-
+*#[[heavy]], [[weighty]]
+*# [[double]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +28,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chung4, chung5 jung6
 
+* '''Compounds''':
+** [[重剑]] (zhongjian)
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちょう]] (chō), [[じゅう]] (jū)
@@ -43,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 중
+* '''[[Hangeul]]''': [[중]]
 
 * '''[[Eumhun]] reading''': 
 
