/* [[Phrasal verb]] */ <sex up#51624>

--- a/wiki/sex_up.wikitext
+++ b/wiki/sex_up.wikitext
@@ -10,7 +10,6 @@
 #:''Enrique Iglesias' sexed-up music video may have been nixed.''
 # To make "cooler"
 #:''How do I sex up my 3000?''
-# To make more [[palatable]] or [[acceptable]] to the general public
-#:''Blair sexed up the evidence to justify his own decision.''
-#:''Australia 'sexed up threat posed by Iraq'.''
-#:''Australian defence adviser 'sacked for refusing to sex up WMD reports'.''
+# To make more [[palatable]] or [[acceptable]] to the general public or a group of people
+#:''The politician sexed up his partisan veiws for the moderate audience''
+#:''The defence sexed up the grizzly details of the crime.''
