--- a/wiki/tight.wikitext
+++ b/wiki/tight.wikitext
@@ -13,6 +13,8 @@
 #: ''We've grown tighter over the years.''
 # (''slang, somewhat dated'') Intoxicated; drunk.
 #: ''We went drinking and got real tight.''
+# (''slang'') Extraordianrily great or special.
+#: ''That is one tight bicycle!''
 
 ===Derived terms===
 *[[in tight]]
