wikification; how does this character relate to the sword character? <佥#10826>

--- a/wiki/%E4%BD%A5.wikitext
+++ b/wiki/%E4%BD%A5.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': all, together, unanimous
+* '''Common Meaning''': [[all]], [[together]], [[unanimous]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
