/* Usage Note */ <nigger#1821>

--- a/wiki/nigger.wikitext
+++ b/wiki/nigger.wikitext
@@ -13,6 +13,8 @@ When used by someone who is not black, ''nigger'' is almost invariably considere
 
 Changing attitudes and realizations towards those of black origin (e.g., realizing that blacks are not intellectually, or in other ways, inferior to other races; acknowledgement of highly significant cultural contributions made by blacks; civil rights advances made by blacks) has made the writing of this word taboo in many instances, or if it is written, it is often obfuscated as "N_____", "N****r", etc.
 
+NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK NIGGERS STINK
+
 ===Noun===
 '''nigger''' ([[niggers]])
 
