--- a/wiki/tight.wikitext
+++ b/wiki/tight.wikitext
@@ -16,6 +16,8 @@
 # (''slang'') Extraordianrily great or special.
 #: ''That is one tight bicycle!''
 
+Sentence: "Your mom is the farthest thing from tight I've ever seen, that's for sure Johnny!"
+
 ===Derived terms===
 *[[in tight]]
 *[[tight end]]
