/* Noun */ between two --> between <lubricant#58968>

--- a/wiki/lubricant.wikitext
+++ b/wiki/lubricant.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''lubricant'''
 
-# A [[substance]] used to reduce [[friction]] between to [[object]]s or [[surface]]s
+# A [[substance]] used to reduce [[friction]] between [[object]]s or [[surface]]s
 
 ====Translations====
 *Finnish: [[voiteluaine]] (1), [[liukastin]] (1)
