--- a/wiki/Daniel.wikitext
+++ b/wiki/Daniel.wikitext
@@ -34,7 +34,7 @@ From Hebrew דניאל
 *[[Italian]]: [[Daniele]]
 *[[Slovak]]: [[Daniel#Slovak|Daniel]] ''m''
 *[[Slovene]]: [[Daniel]], [[Danijel]]
-*[[Spanish]]: [[Daniel(m), Daniela(f)]]
+*[[Spanish]]: [[Daniel]] ''m'', [[Daniela]] ''f''
 ----
 
 ==French==
