--- a/wiki/%E9%AC%B1.wikitext
+++ b/wiki/%E9%AC%B1.wikitext
@@ -8,7 +8,7 @@
 
 * '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 4472<sub>2</sub>
 
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 木木月山竹 (DDBUH)
+* '''[[Wiktionary:Chinese Kanji index|Kanji input]]''': 木木月山竹 (DDBUH)
 
 * '''Graphical Significance and Origin''': 
 
