--- a/wiki/%E4%BD%A9.wikitext
+++ b/wiki/%E4%BD%A9.wikitext
@@ -30,9 +30,14 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': pui3
 
-* '''Compounds''':
-** [[佩剑]] (peijian)
-** [[重剑]] (zhongjian)
+===Compounds===
+*[[佩带]]
+*[[佩戴]]
+*[[佩刀]]
+*[[佩服]]
+*[[佩挂]]
+*[[佩剑]] (peijian)
+*[[佩兰]]
 
 * '''Other info''': 
 
