--- a/wiki/%E9%87%8D.wikitext
+++ b/wiki/%E9%87%8D.wikitext
@@ -20,16 +20,121 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': zhòng (zhong4)
-*** '''[[Wade-Giles]]''': chung<sup>4</sup>
+*** '''[[Pinyin]]''': chóng (chong2), zhòng (zhong4)
+*** '''[[Wade-Giles]]''': ch'ung<sup>2</sup>4, chung<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': chung4, chung5 jung6
 
-* '''Compounds''':
-** [[重剑]] (zhongjian)
+===Compounds===
+#chóng
+#*[[重版]]
+#*[[重播]]
+#*[[重茬]]
+#*[[重唱]]
+#*[[重重]]
+#*[[重出]]
+#*[[重床叠屋]]
+#*[[重蹈覆辙]]
+#*[[重叠]]
+#*[[重返]]
+#*[[重逢]]
+#*[[重复]]
+#*[[重规叠矩]]
+#*[[重合]]
+#*[[重婚]]
+#*[[重见天日]]
+#*[[重建]]
+#*[[重九]]
+#*[[重刊]]
+#*[[重来]]
+#*[[重峦叠嶂]]
+#*[[重起炉灶]]
+#*[[重申]]
+#*[[重审]]
+#*[[重生]]
+#*[[重生父母]]
+#*[[重施故技]]
+#*[[重孙]]
+#*[[重孙女]], [[重孙女儿]]
+#*[[重沓]]
+#*[[重弹老调]]
+#*[[重提]]
+#*[[重围]]
+#*[[重温]]
+#*[[重温旧梦]]
+#*[[重文]]
+#*[[重午]], [[重五]]
+#*[[重现]]
+#*[[重霄]]
+#*[[重新]]
+#*[[重新做人]]
+#*[[重行]]
+#*[[重修]]
+#*[[重修旧好]]
+#*[[重言]]
+#*[[重演]]
+#*[[重阳]]
+#*[[重洋]]
+#*[[重样]]
+#*[[重译]]
+#*[[重印]]
+#*[[重圆]]
+#*[[重张]]
+#*[[重振]]
+#*[[重整旗鼓]]
+#*[[重奏]]
+#*[[重足而立]]
+#zhòng
+#*[[重办]]
+#*[[重臂]]
+#*[[重兵]]
+#*[[重彩]]
+#*[[重臣]]
+#*[[重惩]]
+#*[[重处]]
+#*[[重创]]
+#*[[重大]]
+#*[[重担]]
+#*[[重地]]
+#*[[重点]]
+#*[[重读]]
+#*[[重犯]]
+#*[[重负]]
+#*[[重工业]]
+#*[[重荷]]
+#*[[重话]]
+#*[[重活]], [[重活儿]]
+#*[[重机关枪]]
+#*[[重剑]] (zhongjian)
+#*[[重奖]]
+#*[[重金]]
+#*[[重金属]]
+#*[[重力]]
+#*[[重量]]
+#*[[重炮]]
+#*[[重氢]]
+#*[[重任]]
+#*[[重伤]]
+#*[[重视]]
+#*[[重水]]
+#*[[重头戏]]
+#*[[重托]]
+#*[[重望]]
+#*[[重武器]]
+#*[[重孝]]
+#*[[重心]]
+#*[[重型]]
+#*[[重压]]
+#*[[重要]]
+#*[[重音]]
+#*[[重用]]
+#*[[重油]]
+#*[[重元素]]
+#*[[重责]]
+#*[[重镇]]
 
 * '''Other info''': 
 
