--- a/wiki/%E9%87%8D.wikitext
+++ b/wiki/%E9%87%8D.wikitext
@@ -21,7 +21,7 @@
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
 *** '''[[Pinyin]]''': chóng (chong2), zhòng (zhong4)
-*** '''[[Wade-Giles]]''': ch'ung<sup>2</sup>4, chung<sup>4</sup>
+*** '''[[Wade-Giles]]''': ch'ung<sup>2</sup>, chung<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
