--- a/wiki/equity.wikitext
+++ b/wiki/equity.wikitext
@@ -3,3 +3,4 @@
 ===Noun===
 
 * ownership, especially in terms of net monetary value of some business.
+* a category of Anglo-American common law that deals with remedies other than monetary relief, such as injunctions, divorces and similar actions.
