--- a/wiki/beam.wikitext
+++ b/wiki/beam.wikitext
@@ -18,4 +18,4 @@
 
 ===Translations===
 *Italian: [[raggio]] ''m'', [[trave]] ''f''
-*Japanese: [[梁]] ([[はり]], hari, りょう, ryou), [[光線]] (こうせん, kousen) (11)
+*Japanese: [[梁]] ([[はり]], hari, りょう, ryou) (1), [[光線]] (こうせん, kousen) (11)
