--- a/wiki/volcano.wikitext
+++ b/wiki/volcano.wikitext
@@ -8,7 +8,7 @@
 *{{fr}}: [[volcan]] ''m''
 *{{it}}: [[vulcano]] ''m''
 *{{nl}}: [[vulkaan]]
-*{{ja}}: [[火山]]
+*{{ja}}: [[火山]] (かざん, kazan)
 
 ===Related terms===
 *[[volcanic]]
