--- a/wiki/appendix.wikitext
+++ b/wiki/appendix.wikitext
@@ -7,3 +7,4 @@
 *Finnish: [[liite]] (1), [[umpiliäske]]
 *German: [[Anhang]] m (1), [[Blinddarm]] m (2)
 *Polish: [[dodatek]], [[załącznik]] m (1), [[wyrostek robaczkowy]] m (2)
+*Romanian: [[addenda]] f, [[adaos]] n (1), [[apendice]] (2)
