--- a/wiki/anna.wikitext
+++ b/wiki/anna.wikitext
@@ -7,7 +7,7 @@
 ====Translations====
 *Italian: Anna
 *Slovene: [[Ana]], [[Anica]], [[Anka]], [[Ani]]
-
+*Spanish: [[Ana]] ''f''
 ----
 
 ==Italian==
