--- a/wiki/Anthony.wikitext
+++ b/wiki/Anthony.wikitext
@@ -11,7 +11,7 @@
 *Hungarian: [[Antal]]
 *Italian: [[Antonio]]
 *Portuguese: [[António]]
-*Spanish: [[Tonio]]
+*Spanish: [[Antonio]]
 *Swedish: [[Antonius]]
 
 ===Etymology===
