--- a/wiki/Alexander.wikitext
+++ b/wiki/Alexander.wikitext
@@ -15,4 +15,4 @@
 ====Translations====
 *Bulgarian: [[Александър]]
 *Slovene: [[Aleksander]]
-*Spanish: [[Alejandro (m), Alejandra (f)]]
+*Spanish: [[Alejandro]] ''m'', [[Alejandra]] ''f''
