--- a/wiki/ward.wikitext
+++ b/wiki/ward.wikitext
@@ -7,4 +7,5 @@
 #:''On our last visit to Tokyo, we went to Chiyoda ward and visited the Emperor's palace.''
 
 ====Translations====
-*{{ja}}: -[[区]] (-く, -ku) (4)
+*French: [[arrondissement]] ''m''
+*Japanese: -[[区]] (-く, -ku) (4)
