--- a/wiki/pause.wikitext
+++ b/wiki/pause.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: pôz
 *[[w:IPA|IPA]]: /pɔːz/
@@ -10,6 +11,40 @@
 
 ===Verb===
 '''to pause''' ([[paused]], paused)
+#To interrupt current work and do something else for a moment.
+
+====Translations====
+'''to interrupt something'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[pysähtyä]], [[tauota]], [[pitää]] [[tauko]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ===Noun===
 '''pause''' (plural: [[pauses]])
+#A short time for relaxing and doing something else.
+
+====Translations====
+'''short time'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*{{fi}}: [[pysähdys]], [[tauko]], [[keskeytys]], [[väliaika]], [[lepoaika]], [[katko]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
