--- a/wiki/irrigation.wikitext
+++ b/wiki/irrigation.wikitext
@@ -5,3 +5,18 @@
 '''irrigation'''
 
 #The act or process of irrigating, or the state of being irrigated; especially, the operation of causing water to flow over lands, for nourishing plants.
+
+====Translations====
+
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+*German: [[Bew&auml;sserung]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+
+|}
+|}
