--- a/wiki/thrust.wikitext
+++ b/wiki/thrust.wikitext
@@ -1,11 +1,9 @@
 ==English==
-
 === Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'θɻʌst/
+*[[w:SAMPA|SAMPA]]: /"TrVst/
+*[[w:IPA|IPA]]: /ˈθɹʌst/
 
 ===Verb===
-
 '''to thrust''' (thrust, thrust)
 
 # to make advance with force
@@ -15,12 +13,10 @@
 *Finnish: [[työntää]] (1), [[sysätä]] (1), [[iskeä]] (1)
 *French: [[propulser]]
 *German: [[schieben, stoßen]]
-*Indonesian: [[]]
-*Japanese: [[]]
+*Japanese: [[押す]], [[突く]]
 *Spanish: [[propulsar]]
 
 === Verb ===
-
 '''thrust'''
 
 # past tense of to thrust
@@ -29,7 +25,6 @@
 *[[Dutch]]: [[stuwde vooruit]], [[stuwden vooruit]]
 
 === Verb ===
-
 '''thrust'''
 
 # past participle of to thrust
