--- a/wiki/thrust.wikitext
+++ b/wiki/thrust.wikitext
@@ -12,7 +12,7 @@
 *Dutch: [[vooruitstuwen]]
 *Finnish: [[työntää]] (1), [[sysätä]] (1), [[iskeä]] (1)
 *French: [[propulser]]
-*German: [[schieben, stoßen]]
+*German: [[schieben]], [[stoßen]]
 *Japanese: [[押す]], [[突く]]
 *Spanish: [[propulsar]]
 
