/* Etymology */  added *why* it alludes to the Hesperides <hesperidium#66979>

--- a/wiki/hesperidium.wikitext
+++ b/wiki/hesperidium.wikitext
@@ -5,7 +5,7 @@
 
 === Etymology ===
 
-An allusion to the mythical Garden of the Hesperides.
+Linnaeus gave the name ''Hesperideæ'' to an order containing the genus ''Citrus'', in allusion to the golden apples of the [[w:Hesperides|Hesperides]].  The ''hesperid-'' stem is now used to form technical terms, such as [[hesperidin]], relating to the citrus fruits.
 
 == External Links ==
 
