--- a/wiki/hesperidium.wikitext
+++ b/wiki/hesperidium.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-# Any of several kinds of [[berry|berries]] with leathery skins containing aromatic oils. Includes [[citrus]] fruit such as the lemon and lime.
+# Any of several kinds of [[berry|berries]] having pulpy interiors, and leathery skins containing aromatic oils. Includes [[citrus]] fruit such as the lemon and lime.
 
 === Etymology ===
 
