--- a/wiki/misnomer.wikitext
+++ b/wiki/misnomer.wikitext
@@ -1,5 +1,5 @@
+==English==
 === Noun ===
-misnomer
-
-*An error in naming a person or place.
-*Use of a wrong name.
+'''misnomer'''
+#An error in naming a person or place.
+#Use of a wrong name.
