--- a/wiki/%E6%94%B6.wikitext
+++ b/wiki/%E6%94%B6.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#gather together, collect
-*# harvest
+*# [[gather]] together, [[collect]]
+*# [[harvest]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,102 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': sau1
 
+===Compounds===
+*[[收报]]
+*[[收编]]
+*[[收兵]]
+*[[收藏]]
+*[[收藏家]]
+*[[收操]]
+*[[收场]]
+*[[收车]]
+*[[收成]]
+*[[收存]]
+*[[收到]]
+*[[收发]]
+*[[收方]]
+*[[收放]]
+*[[收费]]
+*[[收服]], [[收伏]]
+*[[收抚]]
+*[[收复]]
+*[[收港]]
+*[[收割]]
+*[[收工]]
+*[[收购]]
+*[[收管]]
+*[[收归]]
+*[[收回]]
+*[[收活]], [[收活儿]]
+*[[收获]]
+*[[收集]]
+*[[收监]]
+*[[收检]]
+*[[收件人]]
+*[[收缴]]
+*[[收据]]
+*[[收看]]
+*[[收口]], [[收口儿]]
+*[[收款]]
+*[[收揽]]
+*[[收礼]]
+*[[收理]]
+*[[收敛]]
+*[[收殓]]
+*[[收留]]
+*[[收拢]]
+*[[收录]]
+*[[收录机]]
+*[[收罗]]
+*[[收买]]
+*[[收纳]]
+*[[收盘]], [[收盘儿]]
+*[[收讫]]
+*[[收清]]
+*[[收秋]]
+*[[收取]]
+*[[收容]]
+*[[收入]]
+*[[收摄]]
+*[[收审]]
+*[[收尸]]
+*[[收市]]
+*[[收视]]
+*[[收视率]]
+*[[收拾]]
+*[[收受]]
+*[[收束]]
+*[[收税]]
+*[[收缩]]
+*[[收摊儿]]
+*[[收条]], [[收条儿]]
+*[[收听]]
+*[[收托]]
+*[[收尾]]
+*[[收文]]
+*[[收下]]
+*[[收效]]
+*[[收心]]
+*[[收信]]
+*[[收押]]
+*[[收养]]
+*[[收益]]
+*[[收音]]
+*[[收音机]]
+*[[收载]]
+*[[收摘]]
+*[[收债]]
+*[[收账]]
+*[[收针]]
+*[[收支]]
+*[[收治]]
+*[[收租]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しゅう]] (shū)
