--- a/wiki/hesperidium.wikitext
+++ b/wiki/hesperidium.wikitext
@@ -7,6 +7,5 @@
 
 Linnaeus gave the name ''Hesperideæ'' to an order containing the genus ''Citrus'', in allusion to the golden apples of the [[w:Hesperides|Hesperides]].  The ''hesperid-'' stem is now used to form technical terms, such as [[hesperidin]], relating to the citrus fruits.
 
-== External Links ==
-
-# Wikipedia: The Garden of the [[w:Hesperides|Hesperides]]
+=== External Links ===
+* Wikipedia: The Garden of the [[w:Hesperides|Hesperides]]
