--- a/wiki/%E6%91%84.wikitext
+++ b/wiki/%E6%91%84.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#take in, absorb
-*# act as deputy
+*# [[take in]], [[absorb]]
+*# act as [[deputy]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,22 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[攝]]
+
+===Compounds===
+*[[摄取]]
+*[[摄生]]
+*[[摄食]]
+*[[摄氏]]
+*[[摄氏温度计]]
+*[[摄像]]
+*[[摄像机]]
+*[[摄行]]
+*[[摄影]]
+*[[摄影机]]
+*[[摄影家]]
+*[[摄影棚]]
+*[[摄政]]
+*[[摄制]]
 
 * '''Other info''': 
 
