--- a/wiki/bereft.wikitext
+++ b/wiki/bereft.wikitext
@@ -1,8 +1,9 @@
-'''Bereft'''
+==English==
+=== Adjective ==
+'''bereft'''
 
-== Adjective ==
-without, deprived of
+#without, deprived of
 
 ===examples===
 * ''bereft of strength'' - powerless
-* ''bereft of gorm'' - in Yorkshire dialect - mindless one, idiot
+* ''bereft of gorm'' - in Yorkshire dialect - mindless one, idiot = [[gormless]]
