--- a/wiki/decade.wikitext
+++ b/wiki/decade.wikitext
@@ -20,6 +20,7 @@
 *Finnish: [[dekadi]] (1), [[vuosikymmen]] (2)
 *French: [[décennie]] ''f'' (2)
 *German: [[Jahrzehnt]] ''n'' (2), [[Dekade]] ''f''
+*Greek: [[δεκάδα]] ''f'' (1), [[δεκαετία]] ''f'' (2)
 *Hebrew: [[עשור]] (A'sor)
 *{{id}}: [[dasawarsa]], [[dekade]]
 *{{ms}}: [[dekad]] (2)
