--- a/wiki/German.wikitext
+++ b/wiki/German.wikitext
@@ -23,6 +23,7 @@
 *French: [[Allemand]] ''m'', [[Allemande]] ''f''
 *[[Frisian]]: [[Dútser]] ''m'', [[Dútse]] ''f''
 *German: [[Deutscher]] ''m'', [[Deutsche]] ''f''
+*Greek: [[Γερμανός]] ''m'', [[Γερμανίδα]] ''f''
 *[[Guaraní]]: [[Alemaniagua]]
 *Hindi: [[जर्मन]]
 *Hungarian: [[német ember]]
@@ -60,6 +61,7 @@
 *French: [[allemand]] ''m''
 *[[Frisian]]: [[Dútsk]] ''n''
 *German: [[Deutsch]] ''n''
+*Greek: [[Γερμανικά]] ''n''/''pl'', [[γερμανική γλώσσα]] ''f''
 *[[Indonesian]]: [[bahasa]] [[Jerman]]
 *[[Interlingua]]: [[germano]]
 *Italian: [[tedesco]] ''m''
@@ -95,6 +97,7 @@
 *French: [[allemand]] ''m'', [[allemande]] ''f''
 *[[Frisian]]: [[Dútsk]]
 *German: [[deutsch]], [[deutsche]] ''f'', [[deutscher]] ''m'', [[deutsches]] ''n'', [[deutschen]] ''pl''
+*Greek: [[γερμανικός]] ''m'', [[γερμανική]] ''f'', [[γερμανικό]] ''n''
 *Guaraní: [[Alemaniagua]]
 *[[Indonesian]]: [[Jerman]]
 *[[Interlingua]]: [[german]]
