--- a/wiki/mirror.wikitext
+++ b/wiki/mirror.wikitext
@@ -19,6 +19,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Catalan: [[mirall]] ''m'', [[espill]] ''m''
 *Czech: [[zrcadlo]] ''n'', [[zrcátko]] ''n''
 *{{fi}}: [[peili]]
 *French: [[glace]] ''f'', [[miroir]] ''m''
