--- a/wiki/German.wikitext
+++ b/wiki/German.wikitext
@@ -97,7 +97,7 @@
 *French: [[allemand]] ''m'', [[allemande]] ''f''
 *[[Frisian]]: [[Dútsk]]
 *German: [[deutsch]], [[deutsche]] ''f'', [[deutscher]] ''m'', [[deutsches]] ''n'', [[deutschen]] ''pl''
-*Greek: [[γερμανικός]] ''m'', [[γερμανική]] ''f'', [[γερμανικό]] ''n''
+*Greek: [[γερμανικός]] ''m'', γερμανική ''f'', γερμανικό ''n''
 *Guaraní: [[Alemaniagua]]
 *[[Indonesian]]: [[Jerman]]
 *[[Interlingua]]: [[german]]
