/* See also */ +[[Ken]] <barbie#66991>

--- a/wiki/barbie.wikitext
+++ b/wiki/barbie.wikitext
@@ -11,4 +11,5 @@
 #(''Australia, colloquial'') Short form of [[barbecue]].
 
 ===See also===
+*[[Ken]]
 *[[w:Barbie|Wikipedia article on Barbie, the doll]]
