--- a/wiki/%E8%82%AF.wikitext
+++ b/wiki/%E8%82%AF.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#willing
-*# consent to, permit
+*# [[willing]]
+*# [[consent]] to, [[permit]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,15 +31,25 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hang2
 
+===Compounds===
+*[[肯定]]
+*[[肯干]]
+*[[肯尼亚]]
+*[[肯于]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō), [[かい]] (kai)
-** '''[[Kun]]''': [[うべなう]] (ubenau), [[がえんじ]] (gaenji), [[あえて]] (aete)
+** '''[[Kun]]''': [[うべなう]] (ubenau), [[がえんずる]] (gaenzuru), [[あえて]] (aete)
+
+===Compounds===
+*[[肯綮]]
+*[[肯定]]
 
 * '''Other info''':  
 
