/* Compounds */ ++; sort by stroke count <剑#11638>

--- a/wiki/%E5%89%91.wikitext
+++ b/wiki/%E5%89%91.wikitext
@@ -32,14 +32,15 @@
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[劍]]
 
 ===Compounds===
+*[[剑术]]
+*[[剑侠]]
 *[[剑拔弩张]]
 *[[剑客]]
 *[[剑眉]]
-*[[剑术]]
 *[[剑舞]]
-*[[剑侠]]
-*[[佩剑]] (peijian)
 *[[花剑]]
+*[[佩剑]] (peijian)
+*[[重剑]] (zhongjian)
 
 * '''Other info''': 
 
